# forewind_test

./: README.md  data.py  processor.py  pyproject.toml  request.py
app/: process.py  processor.py
src/: applications.b64  data.b64  data.py  output.b64
tests/: test_process.py  test_processor.py
