# Setup:
#   pip install poetry           # if not already installed
#   poetry lock                  # generate poetry.lock from this file
#   poetry install               # create the Poetry-managed venv and install deps
#   poetry run pytest tests/     # run tests inside the Poetry venv
#   poetry run python processor.py

[tool.poetry]
name = "forewind-test"
version = "0.1.0"
description = ""
authors = []
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
numpy = "1.26.4"
pandas = "*"

[tool.poetry.group.dev.dependencies]
pytest = "9.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"