[tool.poetry]
name = "forewind-test"
version = "0.1.0"
description = ""
authors = []
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
numpy = "1.26.4"
pandas = "2.3.3"
tabulate = "^0.9.0"

[tool.poetry.group.dev.dependencies]
pytest = "9.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"